--- a/app/src/main/res/layout/works_layout_vertical.xml
+++ b/app/src/main/res/layout/works_layout_vertical.xml
@@ -11,7 +11,6 @@
     app:contentPadding="@dimen/trade_size_dp_3">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/scroll_elenco_linearlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
@@ -19,7 +18,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imgPager"
+            android:id="@+id/img_work"
             android:layout_width="@dimen/trade_size_dp_100"
             android:layout_height="@dimen/trade_size_dp_140"
             android:adjustViewBounds="false"
@@ -29,12 +28,12 @@
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textCastNomes"
+            app:layout_constraintTop_toBottomOf="@+id/name_work"
             tools:src="@drawable/person" />
 
 
         <ProgressBar
-            android:id="@+id/progressBarCast"
+            android:id="@+id/progress_work"
             style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,13 +41,13 @@
             android:focusable="false"
             android:importantForAccessibility="no"
             android:indeterminate="false"
-            app:layout_constraintBottom_toTopOf="@id/textCastPersonagem"
+            app:layout_constraintBottom_toTopOf="@id/person_work"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textCastNomes" />
+            app:layout_constraintTop_toBottomOf="@+id/name_work" />
 
         <TextView
-            android:id="@+id/textCastNomes"
+            android:id="@+id/name_work"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -65,7 +64,7 @@
 
 
         <TextView
-            android:id="@+id/textCastPersonagem"
+            android:id="@+id/person_work"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -78,7 +77,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgPager"
+            app:layout_constraintTop_toBottomOf="@id/img_work"
             tools:text="Nome do personagem do cara" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
