--- a/app/src/main/res/layout/bottom_streaming_tv.xml
+++ b/app/src/main/res/layout/bottom_streaming_tv.xml
@@ -102,7 +102,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tvRc"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
