--- a/app/src/main/res/layout/nav_drawer_header.xml
+++ b/app/src/main/res/layout/nav_drawer_header.xml
@@ -1,82 +1,63 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/containerNavDrawerListViewHeader"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/containerNavDrawer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="start"
-    android:background="#000"
+    android:layout_height="170dp"
+    android:padding="20dp"
+    android:background="@drawable/nav_drawer_header"
     tools:ignore="MissingPrefix">
 
     <ImageView
-        android:id="@+id/imgUserBackground"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/trade_size_dp_164"
-        android:src="@drawable/nav_drawer_header"
-        android:scaleType="centerCrop" />
+        android:id="@+id/photo_user"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:src="@drawable/person"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-    <LinearLayout
-        android:id="@+id/userData"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/login_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/imgUserPhoto"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:fontFamily="monospace"
+        android:textStyle="bold"
+        android:text="@string/login"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:layout_marginTop="10dp"
+        android:visibility="visible"
+        tools:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/photo_user" />
 
-        <TextView
-            android:id="@+id/tUserName"
-            fontPath="fonts/Roboto-Medium.ttf"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/trade_size_dp_16"
-            android:layout_marginStart="@dimen/trade_size_dp_16"
-            android:textColor="#FFFFFF"
-            android:textSize="@dimen/trade_txt_size_sp_16"
-            android:textStyle="normal|bold"
-            tools:text="Nome" />
+    <TextView
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        android:textStyle="italic"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:visibility="visible"
+        android:text="Email@email.com"
+        app:layout_constraintStart_toEndOf="@id/login_label"
+        app:layout_constraintTop_toTopOf="@id/login_label"
+        app:layout_constraintBottom_toBottomOf="@id/login_label" />
 
-            <TextView
-                fontPath="fonts/Roboto-Regular.ttf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/trade_size_dp_16"
-                android:layout_marginStart="@dimen/trade_size_dp_16"
-                android:text="@string/login"
-                android:textColor="#FFFFFF"
-                android:textSize="@dimen/trade_size_dp_16"
-                android:id="@+id/textLogin"
-                android:visibility="invisible" />
+    <TextView
+        android:id="@+id/userName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginTop="5dp"
+        android:visibility="visible"
+        android:text="Nome"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_label" />
 
-            <TextView
-                android:id="@+id/tLogin"
-                fontPath="fonts/Roboto-Regular.ttf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/trade_size_dp_3"
-                android:layout_marginStart="@dimen/trade_size_dp_3"
-                android:textColor="#FFFFFF"
-                android:textSize="@dimen/trade_size_dp_16"
-                tools:text="Email@email.com" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imgUserPhoto"
-        android:layout_width                                                                                    ="@dimen/trade_size_dp_64"
-        android:layout_height="@dimen/trade_size_dp_64"
-        android:layout_marginTop="@dimen/trade_size_dp_35"
-        android:layout_marginLeft="@dimen/trade_size_dp_17"
-        android:layout_marginStart="@dimen/trade_size_dp_17"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        tools:src="@android:drawable/sym_def_app_icon" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
